--- a/TradingSystemServ/TradingSystemServ/TradingSystemServ.csproj
+++ b/TradingSystemServ/TradingSystemServ/TradingSystemServ.csproj
@@ -43,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementation\MarketTradeService.cs" />
+    <Compile Include="Implementation\TradingService.cs" />
     <Compile Include="Models\MarketTrade.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Models\CreateOrderModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TradesService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
